--- a/web/src/main/resources/templates/user/common/cart.html
+++ b/web/src/main/resources/templates/user/common/cart.html
@@ -97,7 +97,7 @@
 							<div class="clearfix">
 								<span class="choose"><input type="checkbox"/>全选</span>								
 								<span class="del"><a>删除</a></span>
-								<span class="num">已选好<b class="red" id="num"></b>件商品</span>
+								<span class="num">已选好<b class="red" id="num"></b>种商品</span>
 								<span>合计：<b  class="red">￥</b><b class="red" id="count"></b></span>
 								<button class="btn green fr make-orders">生成采购订单</button>
 							</div>
