--- a/web/src/main/resources/templates/user/login.html
+++ b/web/src/main/resources/templates/user/login.html
@@ -24,17 +24,17 @@
 <div class="resg-header">		
 		<div class="head-nav">
 			<div class="nav-box">
-				<a href="#">仪器</a>
+				<a href="/productCategory/仪器">仪器</a>
 				<i>|</i>
-				<a href="#">试剂</a>
+				<a href="/productCategory/仪器">试剂</a>
 				<i>|</i>
-				<a href="#">耗材</a>
+				<a href="/productCategory/仪器">耗材</a>
 				<i>|</i>
-				<a href="#">服务</a>
+				<a href="/productCategory/仪器">服务</a>
 				<i>|</i>
-				<a href="#">专题</a>
+				<a href="/productCategory/仪器">专题</a>
 				<i>|</i>
-				<a href="#">资讯</a>
+				<a href="/informationCategorys/行业要闻">资讯</a>
 			</div>
 		</div>
 		<div class="head-box clearfix">
