--- a/web/src/main/resources/templates/user/provider/maintain.html
+++ b/web/src/main/resources/templates/user/provider/maintain.html
@@ -42,7 +42,7 @@
 					</div>
 					<div class="tab-conts">
 						<div class="tab-panel">
-							<table class="bodr change-color save-table">
+							<table class="bodr change-color save-table" style="width: 100%;">
 								<thead>
 									<tr>
 										<th>提交日期</th>
