--- a/web/src/main/resources/templates/user/common/detail.html
+++ b/web/src/main/resources/templates/user/common/detail.html
@@ -37,18 +37,18 @@
 								<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 								<div class="form-group">
 									<div class="fl">
-										<label>邮箱</label> <input type="text" th:field="*{email}" readonly="readonly" />
+										<label>邮箱</label> <input type="text" th:field="*{email}" disabled="disabled"/>
 									</div>
 									<div class="fl">
-										<label>用户名</label> <input type="text" th:field="*{name}" readonly="readonly" />
+										<label>用户名</label> <input type="text" th:field="*{name}" disabled="disabled" />
 									</div>
 								</div>
 								<div class="form-group">
 									<div class="fl">
-										<label>真实姓名</label> <input type="text" th:field="*{realName}" readonly="readonly" />
+										<label>真实姓名</label> <input type="text" th:field="*{realName}" disabled="disabled" />
 									</div>
 									<div class="fl">
-										<label>手机号</label> <input type="text" th:field="*{phone}" readonly="readonly" />
+										<label>手机号</label> <input type="text" th:field="*{phone}" disabled="disabled" />
 									</div>
 								</div>
 								<div class="form-group">
