--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
     <script src="/js/module/app.js"></script>
     <script src="/js/module/user.js"></script>
     <script src="/js/module/brand.js"></script>
-    <script src="/js/module/advertisement.js"></script>
+    <script src="/js/module/advertise.js"></script>
     <script src="/js/module/info.js"></script>
     <script src="/js/module/subject.js"></script>
     <script src="/js/module/product.js"></script>
