修改枚举类型，为枚举类型添加抽象方法getName(),修改data.sql中图片表中type值

--- a/web/src/main/resources/templates/subject/subject.html
+++ b/web/src/main/resources/templates/subject/subject.html
@@ -33,7 +33,7 @@
 					<span>浏览<i th:text="${subject.viewCount}">1212</i>次</span>	
 					<span> 来源 : <i th:text="${subject.createdBy}">上海申捷卫生科1技</i></span>
 				</div>
-				<div class="dtl-txt" >
+				<div class="dtl-txt" escapeXml="false" th:text="${subject.content.content}">
 				</div>			
 				<div class="gray-hd ft14">设备方案</div>
 				<div class="plans" th:if="${yqs.size()!=0}">
