--- a/web/src/main/resources/templates/user/common/buy.html
+++ b/web/src/main/resources/templates/user/common/buy.html
@@ -64,8 +64,7 @@
 									<td th:text="${product.product.specifications}"></td>
 									<td th:text="${product.number}"></td>
 									<td th:text="${product.number * product.product.price}"></td>
-									<td th:if="${product.product.placeOfProduction.toString()=='DOMESTIC'}" th:text="国产"></td>
-									<td th:if="${product.product.placeOfProduction.toString()=='IMPORTED'}" th:text="国产"></td>
+									<td th:text="${product.product.placeOfProduction.getName()}"></td>
 								</tr>
 							</tbody>
 						</table>
