--- a/web/src/main/resources/templates/head/head.html
+++ b/web/src/main/resources/templates/head/head.html
@@ -52,11 +52,11 @@
 					<div class="user-name" id="username"  th:text="${session.SPRING_SECURITY_CONTEXT.authentication.principal.username}"></div>
 					<div class="user-menu bodr">
 						<ul>
-							<li th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_PROVIDER">
-								<a href="/provider/detail">个人中心</a>
+							<li th:unless="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_COMMONUSER">
+								<a href="/supplier/detail">个人中心</a>
 							</li>
 							<li th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_COMMONUSER">
-								<a href="/user/detail">个人资料</a>
+								<a href="/user/detail">个人中心</a>
 							</li>
 							<li th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_COMMONUSER">
 								<a href="/user/collection">收藏夹</a>
