--- a/web/src/main/resources/templates/user/provider/modifyProduct.html
+++ b/web/src/main/resources/templates/user/provider/modifyProduct.html
@@ -6,7 +6,9 @@
   <meta name="description" content=""/>
   <title>商品修改</title>
   <meta name="_csrf" th:content="${_csrf.token}" />
-  <meta name="_csrf_header" th:content="${_csrf.headerName}" />	
+  <meta name="_csrf_header" th:content="${_csrf.headerName}" />
+  <meta name="_csrf_parameterName" th:content="${_csrf.parameterName}" />
+  
   <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}"/>
   <script th:src="@{/js/jquery-min.js}"></script>
   <script type="text/javascript" th:src="@{/js/jquery.ui.widget.js}"></script>
@@ -19,16 +21,17 @@
   <script th:src="@{/js/modifyAction.js}"></script>
 	<script>
         $(function() {
-        	var token = $("meta[name='_csrf']").attr("content");
-    		var header = $("meta[name='_csrf_header']").attr("content");
+    		var token = $("meta[name='_csrf']").attr("content");
+            var parameter = $("meta[name='_csrf_parameterName']").attr("content");
+            var header = $("meta[name='_csrf_header']").attr("content");
 
     		$(document).ajaxSend(function(e, xhr, options) {
     			xhr.setRequestHeader(header, token);
     		});
             $('#content').ckeditor({
-                filebrowserUploadUrl : '/img/upload?' + header + "=" + token,
+                filebrowserUploadUrl : '/provider/img/upload?' + parameter + "=" + token,
                 width : 630,
-                 height : 300
+                height : 300
             });
             $('input[type="file"]').bind('fileuploadsubmit', function(e, data) {
                 var self = $(this);
@@ -145,8 +148,8 @@
 							<label><i>*</i>产地</label>
 							<select class="w235" th:field="*{placeOfProduction}">
 								<option value="">请选择</option>
-								<option th:value="国产">国产</option>
-								<option th:value="进口">进口</option>
+								<option th:value="DOMESTIC">国产</option>
+								<option th:value="IMPORTED">进口</option>
 							</select>
 							<i class="error" th:if="${#fields.hasErrors('placeOfProduction')}" th:errors="*{placeOfProduction}"></i>
 							</div>
@@ -189,7 +192,7 @@
 							<label><i>*</i>商品图片</label> <img th:src="*{coverImg}" width="100" height="100" />
 							<input type="hidden" th:field="*{coverImg}"/>
 							<button id="uploadImg">
-								<input type='file' name='file' th:attr="data-url=@{/productImage}" /> <a href="#">选择文件</a>
+								<input type='file' name='file' th:attr="data-url=@{/provider/productImage}" /> <a href="#">选择文件</a>
 							</button>
 							<i class="error" th:if="${#fields.hasErrors('coverImg')}" th:errors="*{coverImg}"></i>
 						</div>	
