--- a/web/src/main/resources/templates/user/provider/release.html
+++ b/web/src/main/resources/templates/user/provider/release.html
@@ -9,6 +9,7 @@
 
 <meta name="_csrf" th:content="${_csrf.token}" />
 <meta name="_csrf_header" th:content="${_csrf.headerName}" />
+<meta name="_csrf_parameterName" th:content="${_csrf.parameterName}" />
 
 <script type="text/javascript" th:src="@{/js/jquery-1.11.2.min.js}"></script>
 <script type="text/javascript" th:src="@{/js/jquery.ui.widget.js}"></script>
@@ -22,17 +23,17 @@
 <script>
 	$(function() {
 		var token = $("meta[name='_csrf']").attr("content");
-		var header = $("meta[name='_csrf_header']").attr("content");
-
+        var parameter = $("meta[name='_csrf_parameterName']").attr("content");
+        var header = $("meta[name='_csrf_header']").attr("content");
+        
 		$(document).ajaxSend(function(e, xhr, options) {
 			xhr.setRequestHeader(header, token);
 		});
-		
-		$('#content').ckeditor({
-			filebrowserUploadUrl : '/img/upload?' + header + "=" + token,
-			width : 630,
-			height : 300
-		});
+        $('#content').ckeditor({
+        	filebrowserUploadUrl : '/provider/img/upload?' + parameter + "=" + token,
+            width : 630,
+            height : 300
+        });
 		  $('input[type="file"]').bind('fileuploadsubmit', function(e, data) {
               var self = $(this);
               data.formData = {
@@ -125,10 +126,8 @@
 						href="/provider/products">商品维护</a> <a href="/provider/count">商品信息统计</a>
 				</div>
 				<div class="mainpanel bodr basic-info push-good fr">
-					<form th:object="${product}" method="post"
-						action="/provider/instruments?form">
-						<input type="hidden" th:name="${_csrf.parameterName}"
-							th:value="${_csrf.token}" />
+					<form th:object="${product}" method="post" action="/provider/instruments?form">
+						<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 						<div class="form-group">
 							<div class="fl">
 								<label><i>*</i>产品名称</label> <input type="text"
@@ -212,7 +211,7 @@
 							<label><i>*</i>商品图片</label> <img width="100" height="100" th:src="*{coverImg}"/>
 							<input type="hidden" th:field="*{coverImg}"/>
 							<button id="uploadImg">
-								<input type='file' name='file' th:attr="data-url=@{/productImage}" /> <a href="#">选择文件</a>
+								<input type='file' name='file' th:attr="data-url=@{/provider/productImage}" /> <a href="#">选择文件</a>
 							</button>
 								<i class="error" th:if="${#fields.hasErrors('coverImg')}" th:errors="*{coverImg}"></i>
 						</div>
