--- a/admin/src/main/resources/templates/information/info.html
+++ b/admin/src/main/resources/templates/information/info.html
@@ -24,7 +24,7 @@
         </thead>
         <tbody>
             <tr ng-repeat="item in items">
-                <td>{{$index+1}}</td>
+                <td ng-click="view(item)">{{$index+1}}</td>
                 <td>{{item.categoryName}}</td>
                 <td>{{item.title}}</td>
                 <td>{{item.state}}</td>
