--- a/admin/src/main/resources/templates/user/userDetail.html
+++ b/admin/src/main/resources/templates/user/userDetail.html
@@ -93,7 +93,7 @@
             </form>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-primary" ng-click="authenticate(item)">
+            <button type="button" class="btn btn-primary" ng-click="updateScore(item)">
                 提交
             </button>
         </div>
