修复购物车BUG

--- a/web/src/main/resources/templates/product/product.html
+++ b/web/src/main/resources/templates/product/product.html
@@ -204,8 +204,7 @@
 									<div class="text-area fl">
 										<textarea class="bodr" id="content" name="content"></textarea>
 									</div>
-									<input class="btn green fr" id="reviewButton" type="submit"
-									value="评论" />
+									<button class="btn green fr" id="reviewButton" type="submit">评论</button>
 								</form>
 							</div>
 						</div>
@@ -231,7 +230,6 @@
 										</div>
 									</div>
 								</li>
-
 							</ul>
 						</div>
 						<div class="pagination">
