--- a/web/src/main/resources/templates/user/common/cart.html
+++ b/web/src/main/resources/templates/user/common/cart.html
@@ -39,7 +39,7 @@
 				<div class="mainpanel fr">
 					<div class="all ft14">全部商品<span th:if="${list==null}"></span><span th:unless="${list==null}" th:text="${list.size()}"></span></div>
 					<div class="cart-table change-color">
-						<table cellpadding="0" cellspacing="0">
+						<table cellpadding="0" cellspacing="0" style="width: 100%;">
 							<thead>
 								<tr>
 									<th width="30"><input type="checkbox"/></th>
