--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -29,6 +29,7 @@
     <script src="/js/module/product.js"></script>
     <script src="/js/module/productCategory.js"></script>
     <script src="/js/module/solution.js"></script>
+    <script src="/js/module/category.js"></script>
     <!--custom directive-->
     <script src="/js/module/uploadDirective.js"></script>
     <script src="/js/module/ckEditorDirective.js"></script>
@@ -62,7 +63,7 @@
                         <a ui-sref="brand">品牌管理</a>
                     </li>
                     <li>
-                        <a ui-sref="brand">商品分类管理</a>
+                        <a ui-sref="category">商品分类管理</a>
                     </li>
                     <li>
                         <a ui-sref="products">products</a>
